--- a/src/cascadia/TerminalSettingsEditor/MainPage.xaml
+++ b/src/cascadia/TerminalSettingsEditor/MainPage.xaml
@@ -130,9 +130,8 @@
             </Frame>
             <!--  Explicitly set the background color on grid to prevent the navigation animation from overflowing it  -->
             <Grid Grid.Row="1"
-                  Height="100"
-                  Background="{ThemeResource SystemAltHighColor}"
-                  BorderBrush="{ThemeResource SystemBaseLowColor}"
+                  Height="80"
+                  BorderBrush="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                   BorderThickness="0,1,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
